--- a/app/src/main/res/layout/fragment_item2.xml
+++ b/app/src/main/res/layout/fragment_item2.xml
@@ -4,6 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_weight="1" />
+
     <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
@@ -17,4 +23,5 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+
 </LinearLayout>
