--- a/app/src/main/res/layout/coupon_info_activity.xml
+++ b/app/src/main/res/layout/coupon_info_activity.xml
@@ -13,7 +13,23 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/dealName"
-        android:gravity="center"/>
+        android:gravity="left"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/dealInfo"
+        android:gravity="left"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/disclaimer"
+        android:gravity="left"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -21,7 +37,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/dealOrigPrice"
-        android:gravity="center"/>
+        android:gravity="left"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -29,7 +45,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/dealNewPrice"
-        android:gravity="center"/>
+        android:gravity="left"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -37,7 +53,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/dealMoneySaved"
-        android:gravity="center"/>
+        android:gravity="left"/>
 
     <Button
         android:layout_width="wrap_content"
